fix overlapping nav issue

--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,7 @@ nav {
     height: 100vh;
     display: flex;
     justify-content: space-around;
+    padding-top: 50px;
     
 }
 
